--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
   <h1><a herf="index.html">WEB</a></h1>
   <ol>
-    <li><a herf="1.html">HTML</a></li>
-    <li><a herf="2.html">Css</a></li>
-    <li><a herf="3.html">JavaScript</a></li>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">Css</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
 <meta charset ="utf-8">
   <h2>HTML</h2>
